feat: Add event details dialog with comprehensive event information display. Closes #191

--- a/src/app/components/event/event-menu/event-menu.component.html
+++ b/src/app/components/event/event-menu/event-menu.component.html
@@ -13,6 +13,10 @@
     <mat-icon>content_copy</mat-icon>
     Copy
   </button>
+  <button mat-menu-item (click)="openEventDetails()">
+    <mat-icon>info</mat-icon>
+    Details
+  </button>
   <mat-divider></mat-divider>
   @if (showPinOptions()) {
   <button mat-menu-item (click)="onPinClick($event)">
