--- a/src/app/app.html
+++ b/src/app/app.html
@@ -130,6 +130,14 @@
       }
       <mat-divider></mat-divider>
 
+      @if (!isPushNotificationEnabled()) {
+      <button mat-menu-item (click)="enablePushNotifications()">
+        <mat-icon>notifications_active</mat-icon>
+        <span>Enable Push Notifications</span>
+      </button>
+      <mat-divider></mat-divider>
+      }
+
       <button mat-menu-item (click)="openWhatsNewDialog()">
         <mat-icon>campaign</mat-icon>
         <span>What's New</span>
