--- a/src/app/app.html
+++ b/src/app/app.html
@@ -206,10 +206,14 @@
         <span>Calendar</span>
       </button>
       }
+
+      @if (accountState.hasActiveSubscription()) {
       <button mat-menu-item routerLink="/notes">
         <mat-icon>note_stack</mat-icon>
         <span>Notes</span>
       </button>
+      }
+
       <button mat-menu-item [routerLink]="['p', accountState.pubkey(), 'badges']">
         <mat-icon>badge</mat-icon>
         <span>Badges</span>
