--- a/src/app/pages/lists/lists.component.html
+++ b/src/app/pages/lists/lists.component.html
@@ -1,8 +1,8 @@
 <div class="lists-container">
   <header class="page-header">
     <h1>
-      <mat-icon>list</mat-icon>
-      Lists
+      Lists 
+      <!-- <mat-icon class="premium-icon">diamond</mat-icon> -->
     </h1>
     <p class="subtitle">Manage your Nostr lists and sets</p>
   </header>
